--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,9 @@
     --bg_main-color: #141922;
     --bg_player-color: #282828;
     --bg_player-color: #080B12;
+
+    --txt_primary-color:#FFFFFF;
+    --txt_secondary-color:#707277;
 }
 
 /* #endregion */
