--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@
 }
 
 img{
-    width: 100%;
+    max-width: 100%;
 }
 
 ul{
@@ -104,9 +104,7 @@ h3 {
     height: calc( 100vh - 90px);
     background-color: var(--bg_sidebar-color);
     color:var(--txt_secondary-color);
-    padding:24px;
-
-    
+    padding:24px 24px 0;
 }
 
 .logo{
@@ -121,9 +119,10 @@ h3 {
 }
 
 
-.nav_item .nav_text {
+.nav_item .nav_text, .user>.user_id {
     padding:12px 10px;
 }
+
 
 
 .icon.plus {
@@ -138,6 +137,27 @@ h3 {
     
 }
 
+.profile{
+    margin-top: auto;
+}
+
+#profile_img{
+    height: 24px;
+    width: 24px;
+    background-color: grey;
+    border-radius: 50%;
+    
+}
+
+.cta{
+    padding-bottom:10px;
+    border-bottom: 1px solid var(--txt_secondary-color);
+} 
+
+.user>.user_id{
+    color:white;
+    font-weight: 700;
+}
 
 /* #endregion*/
 
