--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,14 @@ h3 {
     padding:0 10px;
 }
 
+
+.pdlr_20{
+    padding: 0 20px;
+}
+
+.pdlr_30{
+    padding: 0 30px;
+}
 .grey {
     color:var(--txt_secondary-color);
 }
@@ -281,4 +289,38 @@ h4{
     background-color: var(--bar_secondary-color);
     height:5px;
     width: 25%;
+}
+
+.player_mid {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+
+.mid_bottom{
+    padding-top:10px;
+    align-items: center;
+}
+
+.mid_bottom .control{
+    background-color: var(--bar_primary-color);
+    height: 5px;
+    width:428px;
+}
+
+
+.mid_bottom .time{
+    font-size: 12px;
+}
+
+.mid_top{
+    align-items: center;
+}
+.mid_top i{
+    font-size: 20px;
+}
+#mid_play{
+    font-size:32px ;
 }
