--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@
     width: 50%;
 }
 
+
+.cl_60{
+    width: 60%;
+}
 .cl_75{
     width: 75%;
 }
@@ -252,7 +256,7 @@ footer .player{
 .player_lh .music{
     flex-direction: column;
     align-items: flex-start;
-    padding: 0 10px;
+    padding: 0 30px 0 10px;
 }
 
 h4{
