--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,11 @@
     width: 100%;
 }
 
+
+.cl_15{
+    width: 15%;
+}
+
 .cl_20 {
     width: 20%;
 }
@@ -81,16 +86,43 @@ svg{
 }
 
 
+h2{
+    font-size:25px;
+    color: var(--txt_primary-color);
+}
+
+
 h3 {
+    font-size:20px;
+    color: var(--txt_primary-color);
+}
+
+h4{
+    font-size: 15px;
+}
+
+h5{
     font-size: 12px;
     padding: 14px 0 0;
     color:var(--txt_primary-color);
 }
 
+
+.pd_14{
+    padding: 14px;
+}
+
+.pdup_16{
+    padding: 16px 0;
+}
+
+.pdud_30{
+    padding: 30px 0;
+}
+
 .pdlr_10{
     padding:0 10px;
 }
-
 
 .pdlr_20{
     padding: 0 20px;
@@ -225,14 +257,19 @@ main{
 }
 
 
+/* #endregion*/
+
+
+.container_lg{
+    padding: 24px 32px 0;
+    flex-direction: column;
+}
+
 .menu {
     justify-content: center;
     font-size:12px;
-    padding: 24px;
+    padding: 0 24px 24px;
 }
-
-/* #endregion*/
-
 
 .menu .first{
     flex-direction: column;
@@ -245,6 +282,35 @@ main{
     width: 35%;
 
 }
+
+
+.catalog{
+    flex-direction: column;
+    min-height:337px;
+    min-width: 100%;
+}
+
+
+
+.album_cover{
+    height: 182px;
+    width: 184px;
+}
+
+.album_cover img{
+    width: 100%;
+    object-fit: cover;
+}
+
+
+.album_text {
+    flex-direction: column;
+    align-items: center;
+}
+
+
+
+
 
 /* #region footer */
 
@@ -279,9 +345,7 @@ footer .player{
     padding: 0 30px 0 10px;
 }
 
-h4{
-    font-size: 15px;
-}
+
 
 .music .song{
     color:var(--txt_secondary-color);
