--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,19 +285,22 @@ main{
 
 
 .catalog{
-    flex-direction: column;
     min-height:337px;
     min-width: 100%;
+    justify-content: space-around;
 }
 
+.cards{
+    width:calc(100% / 6);
+    
+}
 
-
-.album_cover{
+.album {
     height: 182px;
     width: 184px;
 }
 
-.album_cover img{
+.album img{
     width: 100%;
     object-fit: cover;
 }
@@ -306,7 +309,9 @@ main{
 .album_text {
     flex-direction: column;
     align-items: center;
+    justify-content:center;
 }
+
 
 
 
