--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,7 +251,7 @@ main{
     color: var(--txt_primary-color);
     padding:8px 34px;
     cursor:pointer;
-    font-size:12px;
+    font-size:14px;
     text-align:center;
     margin-right: 15px;
 }
@@ -267,7 +267,7 @@ main{
 
 .menu {
     justify-content: center;
-    font-size:12px;
+    font-size:14px;
     padding: 0 24px 24px;
 }
 
@@ -288,10 +288,11 @@ main{
     min-height:337px;
     min-width: 100%;
     justify-content: space-around;
+    gap:16px;
 }
 
 .cards{
-    width:calc(100% / 6);
+    width:calc(100% / 6 - 15px);
     
 }
 
