--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,12 +294,14 @@ main{
 .cards{
     width:calc(100% / 6 - 15px);
     
+    
 }
 
 .album {
     height: 182px;
-    width: 184px;
+    /* width: 184px; */
     margin-right:20px;
+    width: 100%;
 }
 
 .album img{
