add correction in nav bottom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,9 +254,9 @@ main{
     
 }
 
-.profile{
+/* .profile{
     margin-top: auto;
-}
+} */
 
 .cta{
     border-bottom: 1px solid var(--txt_secondary-color);
