--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,6 +360,19 @@ section{
     /* width: 100%; */
 }
 
+
+.album_top{
+    position:relative;
+
+}
+.h_play{
+    font-size: 60px;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    visibility: hidden;
+}
 .album img{
     width: 100%;
     object-fit: cover;
@@ -483,3 +496,14 @@ footer .player{
 }
 
 /* #endregion */
+
+
+/* effects */
+
+.album_top:hover img{
+    filter: opacity(0.5);
+}
+
+.album_top:hover .h_play{
+    visibility: visible;
+}
