add media query height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -767,5 +767,9 @@ footer .player{
 
 } 
 
+@media screen and (max-height:179px){
+    .top_bar{
+        display:hidden;
+    }
 
 /* #endregion */
