--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,28 +25,6 @@
 
 /* #endregion */
 
-/* #region scrollbar */
-::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888; 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
-
-  /* #endregion */
-
 /* #region grid */
 
 .row {
@@ -315,6 +293,7 @@ main{
     flex-direction: column;
     height: calc(100vh - 180px);
     overflow-y: scroll;
+    margin-right: 5px;
 }
 
 .menu {
@@ -645,6 +624,7 @@ footer .player{
 
     .container_lg{
         padding: 24px 18px 0;
+        
     }
 
     /* .recently_played{
@@ -658,7 +638,7 @@ footer .player{
         overflow-x: auto;
         min-width: 390px;
     }
-
+    
 
 }
 
@@ -838,10 +818,15 @@ footer .player{
         margin-bottom: 1rem;
     }
 
-
+    .catalog{ 
+        justify-content: flex-start;
+        flex-wrap: nowrap;
+        gap: 16px;
+        overflow-x: auto;
+        min-width: 600px;
+    }
+    
 }
-
-
 
 @media screen and (max-width:368px){
     .player_lh{
@@ -873,7 +858,5 @@ footer .player{
     }
 
 }
-
-/* #endregion */
 
 /* #endregion */
