--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -628,7 +628,7 @@ footer .player{
         flex-wrap: nowrap;
         gap: 16px;
         overflow-x: auto;
-        min-width: 390px;
+        max-width: 490px;
     }
     
 
@@ -815,17 +815,15 @@ footer .player{
         margin-bottom: 1rem;
     }
 
-    .catalog{ 
-        justify-content: flex-start;
-        flex-wrap: nowrap;
-        gap: 16px;
-        overflow-x: auto;
-        min-width: 600px;
-    }
     
 }
 
 @media screen and (max-width:368px){
+
+    h3{
+        font-size:14px;
+    }
+
     .player_lh{
         display: none;
     }
