--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -594,6 +594,10 @@ footer .player{
         width: 30%;
     }
 
+    .cl_80{
+        width: 70%;
+    }
+
     .cl_60{
         width:40%;
     }
