--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,7 +408,7 @@ footer .player{
 .player_lh .music{
     flex-direction: column;
     align-items: flex-start;
-    padding: 0 30px 0 10px;
+    padding: 0 15px 0 10px;
 }
 
 .music .song{
@@ -640,9 +640,9 @@ footer .player{
 
 @media screen and (max-width:576px){
 
-    .cards{
+   /*  .cards{
         width: calc(100% / 2 - 16px);
-    }
+    } */
 
 
     h3{
@@ -763,9 +763,9 @@ footer .player{
     
     }
 
-    .cards{
+   /*  .cards{
         width: calc(100% / 1 - 16px);
-    }
+    } */
     
 
     .cl_20{
@@ -819,6 +819,7 @@ footer .player{
     .player_rh .control{
         display: none;
     }
+
 
     .player .cl_20{
         width:10%;
